--- a/machine learning/Level1/How Models Work.ipynb
+++ b/machine learning/Level1/How Models Work.ipynb
@@ -22,6 +22,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"files/img/7tsb5b1.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
     "It divides houses into only two categories. You predict the price of a new house by finding out which category it's in, and the prediction is the historical average price from that category.\n",
     "\n",
     "This captures the relationship between house size and price. We use data to decide how to break the houses into two groups, and then again to determine the predicted price in each group. This step of capturing patterns from data is called fitting or training the model. The data used to fit the model is called the training data.\n",
@@ -35,6 +44,15 @@
    "source": [
     "# Example\n",
     "Assuming your decision tree works in a sensible way, which of the two trees shown here do you think you might get from fitting this especially simple decision tree?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "<img src=\"files/img/prAjgku.png\">"
    ]
   },
   {
